--- a/.github/workflows/turnHeatingOn.yml
+++ b/.github/workflows/turnHeatingOn.yml
@@ -28,7 +28,7 @@ jobs:
       - name: zip
         uses: montudor/action-zip@v0.1.0
         with:
-          args: zip -qq -r ./bundle.zip lambdas/turnHeatingOn
+          args: zip -qq -r -j ./bundle.zip lambdas/turnHeatingOn
       - name: default deploy
         uses: appleboy/lambda-action@master
         with:
