--- a/home-portal/amplify/backend/backend-config.json
+++ b/home-portal/amplify/backend/backend-config.json
@@ -7,5 +7,12 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "hosting": {
+    "amplifyhosting": {
+      "service": "amplifyhosting",
+      "type": "cicd",
+      "lastPushTimeStamp": "2021-03-16T20:33:43.685Z"
+    }
   }
 }
